--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
+    "i": "^0.3.7",
+    "npm": "^11.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "swiper": "^11.2.1"
